<resources>
    <string name="app_name">Github User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="search_here">Search here…</string>
    <string name="search">search</string>
    <string name="image_profile_user">Image Profile User</string>
    <string name="hi">Hi,</string>
    <string name="naufal">Naufal</string>
    <string name="mon_nov_9_2020">Mon, Nov 9 2020</string>
    <string name="image_profile_account">Image Profile Account</string>
    <string name="user">User</string>
    <string name="article">Article</string>
    <string name="username">Username</string>
    <string name="article_image">Article Image</string>
    <string name="artice_title">Article Title</string>
    <string name="detail_article">Detail Article</string>
    <string name="guest">Guest</string>
    <string name="surabaya">Surabaya</string>
    <string name="icon_location_content">Icon Location</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="icon_company_content">icon company</string>
    <string name="repository">Repository</string>
    <string name="_0">0</string>
    <string name="icon_website_content">icon website</string>
    <string name="icon_twitter">icon twitter</string>
    <string name="bio">Bio</string>
    <string name="background_profile_content">background profile</string>
    <string name="top_user">Top User</string>
    <string name="what_is_github">What is Github?</string>
    <string name="list">List</string>
    <string name="favorite_user">Favorite User</string>
    <string name="favorite_user_list_will_appear_here">Favorite user list will appear here</string>
    <string name="empty_user_list">empty user list</string>
    <string name="view_more">View more</string>
    <string name="not_found">Not Found</string>
    <string name="cannot_find_the_user">Cannot find the user</string>
    <string name="app">App</string>
    <string name="key_reminder">reminder</string>
    <string name="let_s_find_user">Find User</string>
    <string name="user_list_will_appear_here">User list will appear here</string>
    <string name="image_find_user_content">image find user</string>
    <string name="language">Language</string>
    <string name="key_language">language</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_on">Reminder Successfully Set On</string>
    <string name="reminder_off">Reminder Successfully Set Off</string>
    <string name="success_remove">Success Remove Favorite</string>
    <string name="success_add">Success Add Favorite</string>

</resources>