<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/sw_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_github_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="31dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/what_is_github"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_search_user" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/bg_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/white"
                android:text="@string/mon_nov_9_2020"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_name_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/guest"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/text_view_greetings"
                app:layout_constraintTop_toBottomOf="@+id/txt_date" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edt_search_user"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_search_view"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="15dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/search_here"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@android:color/secondary_text_light_nodisable"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_name_account" />

            <TextView
                android:id="@+id/text_view_greetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/hi"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_date" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_image_account"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/image_profile_account"
                android:src="@drawable/man"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/txt_name_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_date" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_github_intro">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:autoPlay="false"
                    app:showYouTubeButton="true"
                    app:videoId="w3jLJU7DT5E" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_user_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/top_user"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_video" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_rv_user_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_user_list">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical">

                    <include layout="@layout/shimmer_item_list"/>

                    <include layout="@layout/shimmer_item_list"/>

                    <include layout="@layout/shimmer_item_list"/>

                </LinearLayout>


            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_user_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_user_list" />

            <TextView
                android:id="@+id/txt_view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:paddingBottom="80dp"
                android:clipToPadding="false"
                android:fontFamily="@font/poppins_light"
                android:text="@string/view_more"
                android:textColor="#0000EE"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_user_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



