<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#432FB3"
            app:layout_scrollFlags="scroll"
            app:title=" " />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll"
            android:background="@color/white">

            <ImageView
                android:id="@+id/bg_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/background_profile_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_detail" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_image_profile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_profile_detail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/image_profile_user"
                            tools:srcCompat="@tools:sample/avatars" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txt_detail_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cv_image_profile"
                        app:layout_constraintTop_toTopOf="@+id/cv_image_profile" />

                    <TextView
                        android:id="@+id/txt_detail_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/poppins_light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cv_image_profile"
                        app:layout_constraintTop_toBottomOf="@+id/txt_detail_name" />

                    <ImageView
                        android:id="@+id/icon_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/icon_location_content"
                        app:layout_constraintStart_toEndOf="@+id/cv_image_profile"
                        app:layout_constraintTop_toBottomOf="@+id/txt_detail_username"
                        app:srcCompat="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:id="@+id/txt_detail_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/poppins_light"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/icon_location"
                        app:layout_constraintTop_toTopOf="@+id/icon_location" />

                    <TextView
                        android:id="@+id/txt_detail_repository_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/_0"
                        app:layout_constraintEnd_toEndOf="@+id/icon_location"
                        app:layout_constraintStart_toStartOf="@+id/icon_location"
                        app:layout_constraintTop_toBottomOf="@+id/txt_detail_location" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/repository"
                        app:layout_constraintBottom_toBottomOf="@+id/txt_detail_repository_count"
                        app:layout_constraintStart_toStartOf="@+id/txt_detail_location"
                        app:layout_constraintTop_toTopOf="@+id/txt_detail_repository_count" />

                    <ImageView
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="14dp"
                        android:layout_marginBottom="24dp"
                        android:contentDescription="@string/share"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7"
                        app:srcCompat="@drawable/ic_baseline_share_24" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_favorite"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_baseline_star_border_24"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_share"
                        app:layout_constraintEnd_toStartOf="@+id/btn_share"
                        app:layout_constraintTop_toTopOf="@+id/btn_share" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/bio"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_profile_name" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_bio">

                <TextView
                    android:id="@+id/txt_detail_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"
                    android:fontFamily="@font/poppins" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_bio" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_detail_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_detail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="24dp">

                    <ImageView
                        android:id="@+id/icon_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icon_company_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_work_24" />

                    <TextView
                        android:id="@+id/txt_detail_company"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/poppins"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/icon_company"
                        app:layout_constraintTop_toTopOf="@+id/icon_company" />

                    <ImageView
                        android:id="@+id/icon_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/icon_twitter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_detail_company"
                        app:srcCompat="@drawable/twitter" />

                    <TextView
                        android:id="@+id/txt_detail_twitter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/poppins"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/icon_twitter"
                        app:layout_constraintTop_toTopOf="@+id/icon_twitter" />

                    <ImageView
                        android:id="@+id/icon_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/icon_website_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_detail_twitter"
                        app:srcCompat="@drawable/ic_baseline_link_24" />

                    <TextView
                        android:id="@+id/txt_detail_website"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/poppins"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/icon_website"
                        app:layout_constraintTop_toTopOf="@+id/icon_website" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_detail"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_detail_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>




